--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,6 +8,8 @@
 	box-sizing: border-box;
 	font-family: "Montserrat", sans-serif;
 
+	/* outline: 1px solid red; */
+
 	--foreground-rgb: #000;
 }
 
@@ -15,4 +17,8 @@ body {
 	color: var(--foreground-rgb);
 	background: #e9eaec;
 	/* background: linear-gradient(130deg, #e4e5e7 40%, #eddc98ee 80%, #e4e5e7 94%); */
+}
+
+.bg-content1 {
+	background-color: white !important;
 }
