feat: add responsive for navbar

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -13,10 +13,20 @@
 	--foreground-rgb: #000;
 }
 
+:root {
+	font-size: 16px;
+}
+
 body {
 	color: var(--foreground-rgb);
 	background: #e9eaec;
 	/* background: linear-gradient(130deg, #e4e5e7 40%, #eddc98ee 80%, #e4e5e7 94%); */
+}
+
+@media (max-width: 640px) {
+	:root {
+		font-size: 14px;
+	}
 }
 
 .bg-content1 {
